--- a/microService-groupe/src/main/resources/application.properties
+++ b/microService-groupe/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=SERVICE-Groupe
 spring.datasource.url=jdbc:mysql://localhost:3333/Groupe_management_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
